# evalkit

./: .gitignore  .pre-commit-config.yaml  404.html  Eve_IFT_eval_EM_F1.ipynb  README.md  evaluate.py  ex_config.yaml  ift_eval.ipynb  index.html  mkdocs.yml  model_outs_new.csv  objects.inv  plot.py  pyproject.toml  requirements.txt  setup.sh  sitemap.xml
.github/workflows/: ci.yml  deploy_docs.yml
config/: eval_mcqa_hallucination.yaml  eval_open_ended.yaml
cpt_eval/: Eve_CPT_perplexity.ipynb  README.md  eve-base-v0.2_perplexity_text_ap_geobench.csv  eve-base-v0.2_perplexity_text_wiki.csv  geobench_ap_perplexity_sample.txt  perplexity_text_ap_geobench.csv  perplexity_text_wiki.csv  wiki_perplexity_sample.txt  wiki_ppl_sample_text.ipynb
data/Q&A/: 50 Q&A Pairs.csv  50_Q&A_Pairs_no_source.csv  IS_Q&A_w_convertible.csv  MOOCQAs.csv  MOOCQAs.jsonl  MOOCQAs_formatted.csv  openqa.csv  preprocess.ipynb  preprocess.py
data/baselines/: llama_baseline_qa.py
docs/: eo_tasks.md  evalkit.md  examples.md  getting_started.md  index.md
eo_tasks/: index.html
evalkit/: index.html
getting_started/: index.html
metrics/: __init__.py  judge_utils.py  mcqa.py  metrics.py  mini_pile.py  mmlu.py  model.py  perplexity.py  test.ipynb
notebooks/: refusal_dataset.ipynb
results/: perplexity_eve-base-v0_1_ESA_EO_webscrape.json  perplexity_eve-base-v0_1_mdpi_rs.json  perplexity_eve-base-v0_1_mini_pile.json
scripts/: README.md  eval.py  evaluate.py  plot.py  requirements.txt  table2dataset.py
search/: search_index.json
tasks/: README.md  mcqa_utils.py  metrics.py
(+134 files in other folders)
